# RedDigitizerplusplus

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  FindCAEN.txt  README.md  caen_rc.cpp  example.py  pyproject.toml  red_digitizer_helper.cpp  setup.py  test.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst
examples/: CMakeLists.txt
examples/Basic/: CMakeLists.txt  main.cpp
examples/SingleAcquisitionNoGroups/: CMakeLists.txt  main.cpp
include/RedDigitizer++/: caen_rc.hpp  logger_helpers.hpp  red_digitizer_helper.hpp
